# application-tailor-ai

./: README.md  pyproject.toml
src/tailor_ai/: crew.py  main.py
