[project]
name = "tailor_ai"
version = "0.1.0"
description = "tailor-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
tailor_ai = "tailor_ai.main:run"
run_crew = "tailor_ai.main:run"
train = "tailor_ai.main:train"
replay = "tailor_ai.main:replay"
test = "tailor_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
